app/assets/stylesheets/io_import.css.scss
$text_color: #005c97;
$bg_color: #c0e2f9;
$li_number_bg: #007ac9;
$error_color: #ff7d78;

.clearfix { clear:both }

.field_with_errors {
  border-bottom:1px solid $error_color;
  border-left: 1px solid $error_color;
  border-right: 1px solid $error_color;
}

.errors_container {
  background-color: $error_color;
  margin-top:0;
  float: none;
  text-align: center;
  clear:both;
}

.new-order-header {
  margin-top:30px;
  margin-left:40px;

  p.heading {
    font-size:24px;
    color: $text_color;
    font-family: 'Armata', sans-serif;
  }

  p.adv-name {
    color:#999;
    font-weight:bold;
    font-family: 'Armata', sans-serif;
  }

  .field.advertiser-name p {
    height: 40px;
  }

  .field.advertiser-name .tt-query {
    background: url(asset-path('magnifier_icon.png', image)) 2px 5px no-repeat;
    padding-left:20px;
  }

  .field.advertiser-name .tt-hint {
    padding-left:20px;
  }

  .field {
    width:300px;
    float:left;
    margin:3px;

    > p {
      text-align:right;
      color: $text_color;
      width:40%;
      float:left;
      margin-right:10px;
      font-family: 'Armata', sans-serif;
    }

    > span {
      text-align:left;
    }

    .editable-input input, .uneditable-input input {
      width: 105px !important;
    }

    .editable-input input.input-small, .uneditable-input input.input-small {
      width: 95px !important;
    }

    .advertiser-unknown {
      background: $error_color;
      padding: 5px 2px 35px 2px;
    }

    .advertiser-unknown:after {
      content: "Choose DFP advertiser name";
      float: left;
      position: relative;
      top: -5px;
      left: 7px;
    }

    .contact-unknown {
      background: url(asset-path('contact_unknown.png', image));
      width: 16px;
      height: 16px;
      float: left;
      margin-right: 5px;
    }

    .billing-contact-icon {
      background: url(asset-path('billing_contact_icon.png', image));
      width: 16px;
      height: 16px;
      float: right;
      margin-right: 5px;
    }

    .account-contact-icon {
      background: url(asset-path('account_contact_icon.png', image));
      width: 16px;
      height: 16px;
      float: right;
      margin-right: 5px;
    }

    .media-contact-icon {
      background: url(asset-path('media_contact_icon.png', image));
      width: 16px;
      height: 16px;
      float: right;
      margin-right: 5px;
    }

    .salesperson-icon {
      background: url(asset-path('salesperson_icon.png', image));
      width: 16px;
      height: 16px;
      float: right;
      margin-right: 5px;
    }
  }

  .field.order-name .editable {
    display: table-cell;
  }

  .current-io-status-top {
    float:right;
    color: #D02898;
    font-size:20px;
    font-family: 'Armata', sans-serif;
    margin-right: 50px;
  }

  .current-io-status-top:before {
    content: url(asset-path('draft_status_icon.png', image));
    vertical-align: middle;
    margin-right: 5px;
  }

  .general-info-container {
    border-top:1px solid $bg_color;
    border-bottom:1px solid $bg_color;
    float:none;
    margin-top:17px;
    clear:both;

    .columns {
      padding-top:22px;
      padding-bottom:22px;
    }

    .pure-u-1-3 {
      .field {
        width:100%;
        margin-top:10px;
      }
    }
  }

  .toggle-general-info-button {
    padding: 3px;
    clear: both;
    position: relative;
    margin: 0px auto;
    border: 0px;
    color: $text_color;
    background: $bg_color;
    width: 215px;
    padding: 5px;
    cursor: pointer;
  }

  .imported-file-name {
    width:500px;
    border:1px dashed $text_color;
    float:left;
    padding:3px;
    margin-right:50px;
    font-family: 'Armata', sans-serif;

    .name {
      float:left;
      padding-left:10px;
      color: $text_color;
      width: 72%;

      span {
        text-decoration: underline;
        color: black;
        font-family: 'Arial', sans-serif;
      }
    }

    .timestamp {
      color: $text_color;
      float:right;
      font-size:12px;
    }
  }

  .trafficker-container {
    float: right;
    width: 33%;
  }
}

.lineitems-container {
  margin:20px auto;
  width:96%;
  font-size:13px;
  color:black;
  font-weight:normal;
  font-size:normal;

  .header {
    color: $text_color;

    div {
      font-family: 'Armata', sans-serif;
      font-size:14px;
      vertical-align:bottom;
    }
  }

  .lineitem {
    margin-bottom:10px;
    margin-top:10px;
    background-color: $bg_color;
    padding:0;
    clear:both;

    > div[class^="pure-u"] {
      padding:10px 0;
    }

    .li-number {
      text-align:center;
      color:white;
      font-weight:bold;
      background: $li_number_bg;
    }

    .li-number:before {
      content: url(asset-path('expand_li_btn.png', image));
      vertical-align: middle;
      position: relative;
      left: -3em;
      cursor: pointer;
    }

    span.operation {
      color: $text_color;
      cursor: pointer;
    }
  }

  .ads-container {
    /*.ad > div[class^="pure-u"] {
      height: 115px;
    }*/

    div[class^="pure-u"] {
      padding-top: 5px;
    }

    .ad_name {
      text-align: center;
      color: $text_color;
    }

    .buttons-container {
      background-color: white;
      text-align: center;
      cursor: pointer;

      .clone-btn {
        background: url(asset-path('clone_btn.png', image)) no-repeat;
        width: 16px;
        height: 16px;
        float: left;
        margin: 0 5px;
      }
      
      .delete-btn {
        background: url(asset-path('delete_btn.png', image)) no-repeat;
        width: 16px;
        height: 16px;
        float: left;
        margin: 10px 5px 0 5px;
      }
    }
  }

  .targeting_options_condensed {
    clear: both;
    font-size: 11px;
    margin-top:7px;

    span {
      border-bottom: 1px dashed $text_color;
    }
  }
}

.lineitems-summary-container {
  margin:10px;
  font-size:13px;
  color:black;
  font-weight:normal;
  font-size:normal;

  .summary {
    margin-top:20px;

    .totals-label {
      color: $text_color;
    }

    .totals-label, .total-cpm, .total-media-cost, .total-impressions {
      font-weight:bold;
      font-size:14px;
    }

    .li-button {
      float: left;
      padding: 3px 15px;
      border: 1px dashed $text_color;
      color: $text_color;
      cursor: pointer;
    }

    .li-button.disabled {
      cursor: default;
      opacity: 0.5;
    }

    .li-button:not(.add_targeting) {
      margin-left: 15px;
    }
  }
}

.status-btn-container {
  margin-right:10px;
  margin-top:20px;
  padding:10px;
  text-align:right;
  font-family: 'Armata', sans-serif;

  .save-order-btn, .close-order-btn, .push-order-btn, .submit-trafficker-btn, .submit-am-btn, .revert-draft-btn {
    border: 1px dashed $text_color;
    color: $text_color;
    width: 50px;
    float: right;
    text-align: center;
    padding: 5px;
    text-decoration:none;
    margin-right:10px;

    &:hover{
      background: $bg_color;
      cursor: pointer;
    }
  }
}

.account-contact-icon {
  background: url(asset-path('account_contact_icon.png', image)) no-repeat;
  width: 16px;
  height: 16px;
  float: left;
  margin: 0 5px;
}

.dma-targeting-icon {
  background: url(asset-path('dma_targeting_icon.png', image)) no-repeat;
  width: 16px;
  height: 16px;
  float: left;
  margin-right: 5px;
}

.zip-codes-icon {
  background: url(asset-path('zip_codes_icon.png', image)) no-repeat;
  width: 12px;
  height: 16px;
  float: left;
  margin: 0 5px;
}

.targeting-container {
  width: 99%;
  height: 100%;
  float:left;
  border: 2px dashed $text_color;
  padding: 5px;
  background-color: white;
  letter-spacing: 0;
  clear:both;

  .targeting-options {
    width: 50%;
    float: left;

    .tab.zip-codes textarea {
      width: 95%;
    }

    .tab.key-values {
      height: 200px;
      border: 1px solid;
      overflow: auto;
      padding: 5px;
    }
  }

  .save-targeting-btn {
    color: white;
    background-color: $text_color;
    width: 50px;
    float: right;
    text-align: center;
    padding: 5px;
    cursor: pointer;
  }

  .selected-targeting {
    width: 38%;
    float: left;
    padding-left: 25px;

    .zip-codes-targeting {
      .invalid-zip {
        border-bottom: 2px solid $error_color;
      }

      .errors-container {
        border-bottom: 1px dashed $error_color;
      }
    }
  }

  .custom-regular-keyvalue-btn {
    padding-top: 35px;
    padding-right: 10px;
    cursor: pointer;

    span:before {
      content: url(asset-path('custom_kv_icon.png', image));
      vertical-align:text-top;
    }
  }

  .dmas-checkboxes-container {
    width: 95%;
    float: left;
    height: 200px;
    overflow: auto;
    padding-left: 5px;
    border: 1px solid;
    margin-top: 5px;
  }
}

table.creatives-content {
  width: 100%;
  background: white;

  td.creatives-container-offset {
    width: 91.6666%;
    background-color: $bg_color;

    .add-creative-btn {
      color: $text_color;
      width: 50px;
      text-align: center;
      padding: 5px;
      cursor: pointer;
      margin: 5px;
      border: 1px dashed $text_color;
    }

    .done-creative-btn {
      color: white;
      background-color: $text_color;
      width: 50px;
      text-align: center;
      padding: 5px;
      cursor: pointer;
      margin:5px;
    }

    .creatives-container {
      padding-top: 15px;
      padding-bottom: 15px;

      hr {
        width:92%;
        margin:20px auto;
      }

      .creative {
        margin-top:7px;

        .delete-btn-container {
          text-align: center;
          cursor: pointer;

          .delete-btn {
            background: url(asset-path('delete_btn.png', image)) no-repeat;
            width: 14px;
            height: 14px;
            margin-right: 5px;
            margin-top:3px;
          }
        }
      }
    }
  }
}

